plugins {
    id 'java'
    alias(libs.plugins.spring.boot)
    alias(libs.plugins.spring.dep.management)
}

group = 'dev.agasen.common'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(26)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation libs.spring.starter.web
    implementation libs.spring.starter.data.jpa
    implementation libs.spring.starter.validation
    implementation libs.spring.starter.data.redis
    implementation libs.postgresql
    implementation libs.jackson.databind
    implementation libs.aws.s3

    testImplementation libs.junit.jupiter
    testImplementation libs.spring.starter.test
    testImplementation libs.mockito.core
    testImplementation libs.embedded.redis
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview']
    options.release = 26
}

test {
    useJUnitPlatform()
    jvmArgs(['--enable-preview'])
}

jar {
    enabled = true
    archiveClassifier = ''
}

bootJar {
    enabled = false
}
